Fix: Corregir z-index del componente searcher

--- a/src/styles/searcher/searcher.module.scss
+++ b/src/styles/searcher/searcher.module.scss
@@ -10,6 +10,7 @@
     left: 0;
     top: 100%;
     margin-top: 1rem;
+    z-index: 999;
     input {
         width: 100%;
         padding: 0.7rem .5rem;
